--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nIl vostro prodotto è terribile! Non so come siete riusciti a portarlo sul mercato. Non lo voglio! In realtà, nessuno dovrebbe volerlo. Davvero! Datemi i soldi adesso, per favore.'"
+       "'\\nIl vostro prodotto è terribile! Non so come siete riusciti a metterlo sul mercato.\\nNon lo voglio! In realtà, nessuno dovrebbe volerlo.\\nSul serio! Datemi i soldi adesso, per favore.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
