--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -11,7 +11,8 @@
     "from dotenv import load_dotenv\n",
     "from langchain_openai import OpenAI\n",
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
-    "from langchain_core.prompts import ChatPromptTemplate"
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import LLMChain"
    ]
   },
   {
@@ -55,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nIl vostro prodotto è terribile! Non so come siete riusciti a metterlo sul mercato.\\nNon lo voglio! In realtà, nessuno dovrebbe volerlo.\\nSul serio! Datemi i soldi adesso, per favore.'"
+       "'\\nIl vostro prodotto è terribile! Non so come siete riusciti a portarlo sul mercato. Io non lo voglio! In realtà nessuno dovrebbe volerlo. Per favore, potreste darmi dei soldi adesso?'"
       ]
      },
      "execution_count": 4,
@@ -74,6 +75,39 @@
     "chain = prompt_template | chat_model\n",
     "\n",
     "chain.invoke({\"input\": f\"{template_string}\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SystemMessage(content=\"You are a helpful assistant that re-writes the user's text to sound more upbeat.\"), HumanMessage(content=\"I don't like eating tasty things\")]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.prompts import HumanMessagePromptTemplate\n",
+    "from langchain_core.messages import SystemMessage\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "chat_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        SystemMessage(\n",
+    "            content=(\n",
+    "                \"You are a helpful assistant that re-writes the user's text to \"\n",
+    "                \"sound more upbeat.\"\n",
+    "            )\n",
+    "        ),\n",
+    "        HumanMessagePromptTemplate.from_template(\"{text}\"),\n",
+    "    ]\n",
+    ")\n",
+    "messages = chat_template.format_messages(text=\"I don't like eating tasty things\")\n",
+    "print(messages)"
    ]
   }
  ],
