llama and gemini model

--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nIl vostro prodotto è terribile! Non so come siete riusciti a portarlo sul mercato. Io non lo voglio! In realtà nessuno dovrebbe volerlo. Per favore, potreste darmi dei soldi adesso?'"
+       "'\\nIl vostro prodotto è terribile! Non capisco come abbiate potuto portarlo sul mercato. Non lo voglio! In realtà, nessuno dovrebbe volerlo. Sul serio! Datemi i soldi adesso, per favore.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
